tests/paczka1/small_fuzzy/64544589.err
Error in line 2: fl0rAEjj S754 23,6
Error in line 4: fl0rAEjj A382 15,6
